// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerConfigBlock render snapshot 1`] = `
<div>
  <div
    class="css-lpjlij"
  >
    <div>
      <div
        class="css-841suf"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
          type="body1"
        >
          Click on the labels to edit or remove. Set the correct answers by clicking each correct answer per row.
        </div>
        <div
          class="css-1km0bek"
        >
          <div
            class="css-1s3yhxr"
          >
            <div
              class="questionText css-1lkb2sk"
            >
              <div
                data-testid="editable-html"
              />
            </div>
            <div
              class="css-u46i7e"
            >
              <div
                data-testid="editable-html"
              />
            </div>
            <div
              class="css-u46i7e"
            >
              <div
                data-testid="editable-html"
              />
            </div>
            <div
              class="css-58jx8r"
            />
          </div>
          <div
            style="opacity: 1; background-color: transparent;"
          >
            <div>
              <div
                style="width: 100%;"
              >
                <span
                  class="css-zxe338"
                  itemid="handle"
                >
                  <div
                    data-testid="drag-handle"
                  />
                </span>
                <div
                  class="css-3v6xmt"
                >
                  <div
                    class="css-1nc2gr0"
                  >
                    <div
                      data-testid="editable-html"
                    />
                  </div>
                  <div
                    class="css-2omq2f"
                  >
                    <input
                      class="css-18ssibn"
                      type="radio"
                    />
                  </div>
                  <div
                    class="css-2omq2f"
                  >
                    <input
                      class="css-18ssibn"
                      type="radio"
                    />
                  </div>
                  <div
                    class="css-1hnoy10"
                  >
                    <button
                      aria-label="Delete"
                    >
                      <div
                        data-testid="delete-icon"
                      />
                    </button>
                  </div>
                </div>
                <hr
                  class="css-fy70dx"
                />
                <div />
              </div>
            </div>
          </div>
          <div
            style="opacity: 1; background-color: transparent;"
          >
            <div>
              <div
                style="width: 100%;"
              >
                <span
                  class="css-zxe338"
                  itemid="handle"
                >
                  <div
                    data-testid="drag-handle"
                  />
                </span>
                <div
                  class="css-3v6xmt"
                >
                  <div
                    class="css-1nc2gr0"
                  >
                    <div
                      data-testid="editable-html"
                    />
                  </div>
                  <div
                    class="css-2omq2f"
                  >
                    <input
                      class="css-18ssibn"
                      type="radio"
                    />
                  </div>
                  <div
                    class="css-2omq2f"
                  >
                    <input
                      class="css-18ssibn"
                      type="radio"
                    />
                  </div>
                  <div
                    class="css-1hnoy10"
                  >
                    <button
                      aria-label="Delete"
                    >
                      <div
                        data-testid="delete-icon"
                      />
                    </button>
                  </div>
                </div>
                <hr
                  class="css-fy70dx"
                />
                <div />
              </div>
            </div>
          </div>
          <div
            style="opacity: 1; background-color: transparent;"
          >
            <div>
              <div
                style="width: 100%;"
              >
                <span
                  class="css-zxe338"
                  itemid="handle"
                >
                  <div
                    data-testid="drag-handle"
                  />
                </span>
                <div
                  class="css-3v6xmt"
                >
                  <div
                    class="css-1nc2gr0"
                  >
                    <div
                      data-testid="editable-html"
                    />
                  </div>
                  <div
                    class="css-2omq2f"
                  >
                    <input
                      class="css-18ssibn"
                      type="radio"
                    />
                  </div>
                  <div
                    class="css-2omq2f"
                  >
                    <input
                      class="css-18ssibn"
                      type="radio"
                    />
                  </div>
                  <div
                    class="css-1hnoy10"
                  >
                    <button
                      aria-label="Delete"
                    >
                      <div
                        data-testid="delete-icon"
                      />
                    </button>
                  </div>
                </div>
                <hr
                  class="css-fy70dx"
                />
                <div />
              </div>
            </div>
          </div>
          <div
            style="opacity: 1; background-color: transparent;"
          >
            <div>
              <div
                style="width: 100%;"
              >
                <span
                  class="css-zxe338"
                  itemid="handle"
                >
                  <div
                    data-testid="drag-handle"
                  />
                </span>
                <div
                  class="css-3v6xmt"
                >
                  <div
                    class="css-1nc2gr0"
                  >
                    <div
                      data-testid="editable-html"
                    />
                  </div>
                  <div
                    class="css-2omq2f"
                  >
                    <input
                      class="css-18ssibn"
                      type="radio"
                    />
                  </div>
                  <div
                    class="css-2omq2f"
                  >
                    <input
                      class="css-18ssibn"
                      type="radio"
                    />
                  </div>
                  <div
                    class="css-1hnoy10"
                  >
                    <button
                      aria-label="Delete"
                    >
                      <div
                        data-testid="delete-icon"
                      />
                    </button>
                  </div>
                </div>
                <hr
                  class="css-fy70dx"
                />
                <div />
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-6s2gy-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-5defm6-MuiSvgIcon-root"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
            Add Another Row
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`choice snapshot renders 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <span
      class="css-zxe338"
      itemid="handle"
    >
      <div
        data-testid="drag-handle"
      />
    </span>
    <div
      class="css-3v6xmt"
    >
      <div
        class="css-1nc2gr0"
      >
        <div
          data-testid="editable-html"
        />
      </div>
      <div
        class="css-2omq2f"
      >
        <input
          class="css-18ssibn"
          type="radio"
        />
      </div>
      <div
        class="css-2omq2f"
      >
        <input
          class="css-18ssibn"
          type="radio"
        />
      </div>
      <div
        class="css-1hnoy10"
      >
        <button
          aria-label="Delete"
        >
          <div
            data-testid="delete-icon"
          />
        </button>
      </div>
    </div>
    <hr
      class="css-fy70dx"
    />
    <div />
  </div>
</div>
`;
